--- a/resources/ui/main.ui
+++ b/resources/ui/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>997</width>
-    <height>812</height>
+    <width>1353</width>
+    <height>861</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,7 +53,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>997</width>
+     <width>1353</width>
      <height>21</height>
     </rect>
    </property>
@@ -63,11 +63,10 @@
     </property>
     <addaction name="actionNew"/>
     <addaction name="actionOpen"/>
+    <addaction name="actionClose"/>
     <addaction name="separator"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_as"/>
-    <addaction name="separator"/>
-    <addaction name="actionClose"/>
     <addaction name="separator"/>
     <addaction name="actionRestart"/>
     <addaction name="actionExit"/>
@@ -101,59 +100,23 @@
     <addaction name="actionWorkers"/>
     <addaction name="actionLogs"/>
    </widget>
+   <widget class="QMenu" name="menuOperators">
+    <property name="title">
+     <string>Operators</string>
+    </property>
+    <addaction name="actionEdge_detection"/>
+    <addaction name="actionErode"/>
+    <addaction name="actionDilate"/>
+    <addaction name="actionIdentity"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
    <addaction name="menuView"/>
+   <addaction name="menuOperators"/>
    <addaction name="menuTools"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QDockWidget" name="operatorsDock">
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="windowTitle">
-    <string>Operators</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>1</number>
-   </attribute>
-   <widget class="QWidget" name="operators">
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="1">
-      <widget class="QToolButton" name="dilateButton">
-       <property name="text">
-        <string>Dilate</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QToolButton" name="erodeButton">
-       <property name="text">
-        <string>Erode</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QToolButton" name="identityButton">
-       <property name="text">
-        <string>Identity</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QToolButton" name="edgeButton">
-       <property name="text">
-        <string>Edge detection</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-  </widget>
   <widget class="QDockWidget" name="workerDock">
    <property name="windowTitle">
     <string>Worker</string>
@@ -161,7 +124,7 @@
    <attribute name="dockWidgetArea">
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="worker">
+   <widget class="WorkerManagerWidget" name="worker">
     <layout class="QVBoxLayout" name="verticalLayout"/>
    </widget>
   </widget>
@@ -172,7 +135,7 @@
    <attribute name="dockWidgetArea">
     <number>8</number>
    </attribute>
-   <widget class="QWidget" name="console"/>
+   <widget class="ConsoleWidget" name="console"/>
   </widget>
   <widget class="QDockWidget" name="treeviewDock">
    <property name="windowTitle">
@@ -221,9 +184,59 @@
     <string>Images</string>
    </property>
    <attribute name="dockWidgetArea">
-    <number>8</number>
+    <number>2</number>
    </attribute>
-   <widget class="QWidget" name="images"/>
+   <widget class="SourceBrowser" name="images"/>
+  </widget>
+  <widget class="QToolBar" name="fileToolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionNew"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionClose"/>
+   <addaction name="separator"/>
+   <addaction name="actionSave"/>
+   <addaction name="actionSave_as"/>
+   <addaction name="separator"/>
+   <addaction name="actionRestart"/>
+   <addaction name="actionExit"/>
+  </widget>
+  <widget class="QToolBar" name="operatorToolBar">
+   <property name="windowTitle">
+    <string>toolBar_2</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionEdge_detection"/>
+   <addaction name="actionErode"/>
+   <addaction name="actionDilate"/>
+   <addaction name="actionIdentity"/>
+  </widget>
+  <widget class="QToolBar" name="viewToolBar">
+   <property name="windowTitle">
+    <string>toolBar_2</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionRestore_layout"/>
+   <addaction name="actionSave_layout"/>
+   <addaction name="actionLoad_layout"/>
+   <addaction name="action100"/>
   </widget>
   <widget class="QToolBar" name="toolBar">
    <property name="windowTitle">
@@ -235,20 +248,8 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="actionRestart"/>
-   <addaction name="separator"/>
-   <addaction name="actionNew"/>
-   <addaction name="actionOpen"/>
-   <addaction name="actionSave"/>
-   <addaction name="actionClose"/>
-   <addaction name="separator"/>
    <addaction name="actionLogs"/>
    <addaction name="actionImages"/>
-   <addaction name="separator"/>
-   <addaction name="actionRestore_layout"/>
-   <addaction name="actionSave_layout"/>
-   <addaction name="actionLoad_layout"/>
-   <addaction name="action100"/>
   </widget>
   <action name="actionOpen">
    <property name="text">
@@ -342,7 +343,47 @@
     <string>Restart</string>
    </property>
   </action>
+  <action name="actionEdge_detection">
+   <property name="text">
+    <string>Edge detection</string>
+   </property>
+  </action>
+  <action name="actionErode">
+   <property name="text">
+    <string>Erode</string>
+   </property>
+  </action>
+  <action name="actionDilate">
+   <property name="text">
+    <string>Dilate</string>
+   </property>
+  </action>
+  <action name="actionIdentity">
+   <property name="text">
+    <string>Identity</string>
+   </property>
+  </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ConsoleWidget</class>
+   <extends>QWidget</extends>
+   <header>qtwidgets.console.console_widget</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>WorkerManagerWidget</class>
+   <extends>QWidget</extends>
+   <header>qtwidgets.worker.worker_manager_widget</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>SourceBrowser</class>
+   <extends>QWidget</extends>
+   <header>piafedit.gui.browser.source_browser</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
